convert to https

--- a/src/add.html
+++ b/src/add.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Add a habit</title>
 		<link rel="stylesheet" href="../css/forms.css">
-		<script type="text/javascript" src="http://www.parsecdn.com/js/parse-latest.js"></script>
+		<script type="text/javascript" src="https://www.parsecdn.com/js/parse-latest.js"></script>
 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	</head>
@@ -59,7 +59,7 @@
 					onclick="notify();"><span>3</span></label>
 					<span id="times">times</span>
 				</div>
-				<p><label><span id="others_text">Others: </span><input id="others" type="text" name="day" placeholder="More than 3 times"></label></p>	
+				<p><label><span id="others_text">Others: </span><input id="others" type="text" name="day" placeholder="More than 3 times"></label></p>
 				<!--<p id="save_p"><input id="save" type="button" onclick="validateForm()" value="Save It" > onclick="location.href='list.html'" > onclick="addHabit();"></p> onclick ="location.href='list.html'" -->
 
 				<p id="notifications"><label>Notifications:</label></p>
@@ -112,7 +112,7 @@
 				</template>
 
 				<ul id="alarm-list">
-					
+
 				</ul>
 
 				<p id="save_p"><input id="save" type="button" value="Save It" onclick="validateForm();"></p> <!-- onclick ="location.href='list.html'"  addHabit() used to be inside-->
@@ -127,7 +127,7 @@
 			var defaultImage = Parse.Object.extend("DefaultImages");
 			var counter = 0;
 
-			function addAlarmToList(alarmNumber) 
+			function addAlarmToList(alarmNumber)
 	        {
 	            var list = document.getElementById("alarm-list");
 	            var template = document.querySelector("#alarm")
@@ -168,14 +168,14 @@
 			  var switchState = document.getElementById('myonoffswitch');
 			  if (switchState.checked)
 			  {
-				  for (var i = 1; i <= frequencyAlarm; i++) 
+				  for (var i = 1; i <= frequencyAlarm; i++)
 				  {
 	                	addAlarmToList(i);
 	              }
           	  }
 			});
 
-			//function called when other_text changes 
+			//function called when other_text changes
 			$("#others").change(function (e) {
    				$("input[type='radio']").removeAttr('checked');
    				//var radioButton = document.getElementById('once');
@@ -194,7 +194,7 @@
 					var switchState = document.getElementById('myonoffswitch');
 				    if (switchState.checked)
 				    {
-					  for (var i = 1; i <= frequencyAlarm; i++) 
+					  for (var i = 1; i <= frequencyAlarm; i++)
 					  {
 		                	addAlarmToList(i);
 		              }
@@ -202,43 +202,43 @@
           		}
 			});
 
-			function switchNotification() 
+			function switchNotification()
 			{
 				var switchState = document.getElementById('myonoffswitch');
 				$('#alarm-list').empty(); //needed in either case (if notification on or off)
 
 				if (switchState.checked)
-				{	
+				{
 					var frequencyAlarm;
 					if (document.getElementById('once').checked)
 					{
 						frequencyAlarm = 1;
-						for (var i = 1; i <= frequencyAlarm; i++) 
-				 		{		
+						for (var i = 1; i <= frequencyAlarm; i++)
+				 		{
 	                		addAlarmToList(i);
 	              		}
 					}
 					else if (document.getElementById('twice').checked)
 					{
 						frequencyAlarm = 2;
-						for (var i = 1; i <= frequencyAlarm; i++) 
-				 		{		
+						for (var i = 1; i <= frequencyAlarm; i++)
+				 		{
 	                		addAlarmToList(i);
 	              		}
 					}
 					else if (document.getElementById('thrice').checked)
 					{
 						frequencyAlarm = 3;
-						for (var i = 1; i <= frequencyAlarm; i++) 
-				 		{		
+						for (var i = 1; i <= frequencyAlarm; i++)
+				 		{
 	                		addAlarmToList(i);
 	              		}
 					}
 					else if($('#others').val() < 10 && $('#others').val() % 1 == 0 && $('#others').val() > 0 )
 					{
 						frequencyAlarm = $('#others').val();
-						for (var i = 1; i <= frequencyAlarm; i++) 
-				 		{		
+						for (var i = 1; i <= frequencyAlarm; i++)
+				 		{
 	                		addAlarmToList(i);
 	              		}
 					}
@@ -252,7 +252,7 @@
 				document.getElementById('icon2').style.border = "none";
 				document.getElementById('icon2').className = "icon";
 				document.getElementById('icon3').style.border = "none";
-				document.getElementById('icon3').className = "icon";				
+				document.getElementById('icon3').className = "icon";
 				document.getElementById('myImg').style.border = "none";
 				document.getElementById('myImg').className = "icon";
 				var image = document.getElementById(name);
@@ -269,12 +269,12 @@
 				var dailyFreqValidated = false;
 
 				//title validation
-				if (document.getElementById('title').value == "")				
+				if (document.getElementById('title').value == "")
 				{
 					document.getElementById('title').style.border = '1px solid';
 					document.getElementById('title').style.borderColor = '#b94a48';
 				}
-				else 
+				else
 				{
 					document.getElementById('title').style.border = '2px inset';
 					tileValidated = true;
@@ -355,14 +355,14 @@
 				//either daily frequency selected or others selected  (validates!)
 				else if (($( "#once, #twice, #thrice" ).hasClass( "selectedTimesADay" ) && $('#others').val() == '')
 					|| (!($( "#once, #twice, #thrice" ).hasClass( "selectedTimesADay" )) && $('#others').val() != ''
-					 && $('#others').val() < 10 && $('#others').val() % 1 == 0 ) ) 
+					 && $('#others').val() < 10 && $('#others').val() % 1 == 0 ) )
 				{
 					document.getElementById('selectedBothFrequencies').style.display = 'none';
 					document.getElementById('noDailyFrequency').style.display = 'none';
 					document.getElementById('others').style.border = '2px inset';
 					dailyFreqValidated = true;
 				}
-				//nothing selected or invalid input in others box 
+				//nothing selected or invalid input in others box
 				else
 				{
 					document.getElementById('others').style.border = '1px solid';
@@ -374,7 +374,7 @@
 				{
 					addHabit();
 				}
-				 
+
 			//if ($('#title').val() == '')
 			}
 
@@ -392,11 +392,11 @@
 						case "one":
 							$('.notifications1').css('display','block');
 							$('.notifications2').css('display','none');
-							$('.notifications3').css('display','none');		
+							$('.notifications3').css('display','none');
 							break;
 						case "two":
 							$('.notifications1').css('display','block');
-							$('.notifications2').css('display','block');	
+							$('.notifications2').css('display','block');
 							$('.notifications3').css('display','none');
 							break;
 						case "three":
@@ -404,8 +404,8 @@
 							$('.notifications2').css('display','block');
 							$('.notifications3').css('display','block');
 							break;
-						default: 
-							$('.notifications1').css('display','block');	
+						default:
+							$('.notifications1').css('display','block');
 					}
 
 				}
