--- a/src/add.html
+++ b/src/add.html
@@ -8,6 +8,7 @@
 		<script type="text/javascript" src="https://www.parsecdn.com/js/parse-latest.js"></script>
 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+		<script src='../js/notifications.js'></script>
 	</head>
 	<body>
 
@@ -64,7 +65,7 @@
 
 				<p id="notifications"><label>Notifications:</label></p>
 				<div class="onoffswitch" >
-   					<input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="myonoffswitch" checked onclick="switchNotification();">
+   					<input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="myonoffswitch" onclick="switchNotification();">
     				<label class="onoffswitch-label" for="myonoffswitch">
         			<span class="onoffswitch-inner"></span>
         			<span class="onoffswitch-switch"></span>
