--- a/src/edit.html
+++ b/src/edit.html
@@ -46,9 +46,9 @@
 				<p><label class="error_message" id="noDailyFrequency" style="display:none">Please select a daily frequency or enter your own (<10).</label></p>
 				<p><label class="error_message" id="selectedBothFrequencies" style="display:none">Please select EITHER a daily frequency OR enter your own (<10).</label></p>
 				<div id="daily-button">
-					<label> <input style="display:none" id="once" type="radio" name="day" value="one" onclick="notify();"><span>1</span></label>
-					<label> <input style="display:none" id="twice" type="radio" name="day" value="two" onclick="notify();"><span>2</span></label>
-					<label> <input style="display:none" id="thrice" type="radio" name="day" value="three" onclick="notify();"><span>3</span></label>
+					<label> <input style="display:none" id="once" type="radio" name="day" value="one"><span>1</span></label>
+					<label> <input style="display:none" id="twice" type="radio" name="day" value="two"><span>2</span></label>
+					<label> <input style="display:none" id="thrice" type="radio" name="day" value="three"><span>3</span></label>
 					<span id="times">times</span>
 				</div>
 				<p><label><span id="others_text">Others: </span><input id="others" type="text" name="day" placeholder="More than 3 times"></label></p>	
@@ -56,270 +56,58 @@
 
 				<p id="notifications"><label>Notifications:</label></p>
 				<div class="onoffswitch" >
-   					<input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="myonoffswitch" checked onclick="incCounter();">
+   					<input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="myonoffswitch" checked onclick="switchNotification();">
     				<label class="onoffswitch-label" for="myonoffswitch">
         			<span class="onoffswitch-inner"></span>
         			<span class="onoffswitch-switch"></span>
     				</label>
 				</div>
 
-				<div class="notifications1">
-				<p id="alarm">Alarm 1</p>
-					<select id="hr1">
-	  					<option value="1">1</option>
-	 					<option value="2">2</option>
-	  					<option value="3">3</option>
-					  	<option value="4">4</option>
-	  					<option value="5">5</option>
-	 					<option value="6">6</option>
-	  					<option value="7">7</option>
-					  	<option value="8">8</option>
-	  					<option value="9">9</option>
-	 					<option value="10">10</option>
-	  					<option value="11">11</option>
-					  	<option value="12">12</option>
-					</select>
+				<template id="alarm">
+					<li>
+						<p class="alarm-name">Alarm 1</p>
+						<select id="hr1">
+		  					<option value="1">1</option>
+		 					<option value="2">2</option>
+		  					<option value="3">3</option>
+						  	<option value="4">4</option>
+		  					<option value="5">5</option>
+		 					<option value="6">6</option>
+		  					<option value="7">7</option>
+						  	<option value="8">8</option>
+		  					<option value="9">9</option>
+		 					<option value="10">10</option>
+		  					<option value="11">11</option>
+						  	<option value="12">12</option>
+						</select>
 
-					<select id="min1">
-	  					<option value="00">:00</option>
-	 					<option value="01">:01</option>
-	  					<option value="02">:02</option>
-					  	<option value="03">:03</option>
-	  					<option value="04">:04</option>
-	 					<option value="05">:05</option>
-	 					<option value="06">:06</option>
-	  					<option value="07">:07</option>
-					  	<option value="08">:08</option>
-	  					<option value="09">:09</option>
-	 					<option value="10">:10</option>
-	  					<option value="11">:11</option>
-					  	<option value="12">:12</option>
-					  	<option value="13">:13</option>
-	  					<option value="14">:14</option>
-	 					<option value="15">:15</option>
-	 					<option value="16">:16</option>
-	  					<option value="17">:17</option>
-					  	<option value="18">:18</option>
-	  					<option value="19">:19</option>
-	 					<option value="20">:20</option>
-	  					<option value="21">:21</option>
-					  	<option value="22">:22</option>
-					  	<option value="23">:23</option>
-	  					<option value="24">:24</option>
-	 					<option value="25">:25</option>
-	 					<option value="26">:26</option>
-	  					<option value="27">:27</option>
-					  	<option value="28">:28</option>
-	  					<option value="29">:29</option>
-	 					<option value="30">:30</option>
-	  					<option value="31">:31</option>
-					  	<option value="32">:32</option>
-					  	<option value="33">:33</option>
-	  					<option value="34">:34</option>
-	 					<option value="35">:35</option>
-	 					<option value="36">:36</option>
-	  					<option value="37">:37</option>
-					  	<option value="38">:38</option>
-	  					<option value="39">:39</option>
-	  					<option value="40">:40</option>
-	  					<option value="41">:41</option>
-					  	<option value="42">:42</option>
-					  	<option value="43">:43</option>
-	  					<option value="44">:44</option>
-	 					<option value="45">:45</option>
-	 					<option value="46">:46</option>
-	  					<option value="47">:47</option>
-					  	<option value="48">:48</option>
-	  					<option value="49">:49</option>
-	 					<option value="50">:50</option>
-	  					<option value="51">:51</option>
-					  	<option value="52">:52</option>
-					  	<option value="53">:53</option>
-	  					<option value="54">:54</option>
-	 					<option value="55">:55</option>
-	 					<option value="56">:56</option>
-	  					<option value="57">:57</option>
-					  	<option value="58">:58</option>
-	  					<option value="59">:59</option>
-					</select>
+						<select id="min1">
+		  					<option value="00">:00</option>
+		 					<option value="05">:05</option>
+		  					<option value="10">:10</option>
+						  	<option value="15">:15</option>
+		  					<option value="20">:20</option>
+		 					<option value="25">:25</option>
+		 					<option value="30">:30</option>
+		  					<option value="35">:35</option>
+						  	<option value="40">:40</option>
+		  					<option value="45">:45</option>
+		 					<option value="50">:50</option>
+		  					<option value="55">:55</option>
 
-					<select id="am1">
-	  					<option value="am">am</option>
-	 					<option value="pm">pm</option>
-					</select>
-				</div>	
+						</select>
 
-			<div class="notifications2">
-				<p id="alarm">Alarm 2</p>
-					<select id="hr2">
-	  					<option value="1">1</option>
-	 					<option value="2">2</option>
-	  					<option value="3">3</option>
-					  	<option value="4">4</option>
-	  					<option value="5">5</option>
-	 					<option value="6">6</option>
-	  					<option value="7">7</option>
-					  	<option value="8">8</option>
-	  					<option value="9">9</option>
-	 					<option value="10">10</option>
-	  					<option value="11">11</option>
-					  	<option value="12">12</option>
-					</select>
+						<select id="am1">
+		  					<option value="am">am</option>
+		 					<option value="pm">pm</option>
+						</select>
+					</li>
+				</template>
 
-					<select id="min2">
-	  					<option value="00">:00</option>
-	 					<option value="01">:01</option>
-	  					<option value="02">:02</option>
-					  	<option value="03">:03</option>
-	  					<option value="04">:04</option>
-	 					<option value="05">:05</option>
-	 					<option value="06">:06</option>
-	  					<option value="07">:07</option>
-					  	<option value="08">:08</option>
-	  					<option value="09">:09</option>
-	 					<option value="10">:10</option>
-	  					<option value="11">:11</option>
-					  	<option value="12">:12</option>
-					  	<option value="13">:13</option>
-	  					<option value="14">:14</option>
-	 					<option value="15">:15</option>
-	 					<option value="16">:16</option>
-	  					<option value="17">:17</option>
-					  	<option value="18">:18</option>
-	  					<option value="19">:19</option>
-	 					<option value="20">:20</option>
-	  					<option value="21">:21</option>
-					  	<option value="22">:22</option>
-					  	<option value="23">:23</option>
-	  					<option value="24">:24</option>
-	 					<option value="25">:25</option>
-	 					<option value="26">:26</option>
-	  					<option value="27">:27</option>
-					  	<option value="28">:28</option>
-	  					<option value="29">:29</option>
-	 					<option value="30">:30</option>
-	  					<option value="31">:31</option>
-					  	<option value="32">:32</option>
-					  	<option value="33">:33</option>
-	  					<option value="34">:34</option>
-	 					<option value="35">:35</option>
-	 					<option value="36">:36</option>
-	  					<option value="37">:37</option>
-					  	<option value="38">:38</option>
-	  					<option value="39">:39</option>
-	  					<option value="40">:40</option>
-	  					<option value="41">:41</option>
-					  	<option value="42">:42</option>
-					  	<option value="43">:43</option>
-	  					<option value="44">:44</option>
-	 					<option value="45">:45</option>
-	 					<option value="46">:46</option>
-	  					<option value="47">:47</option>
-					  	<option value="48">:48</option>
-	  					<option value="49">:49</option>
-	 					<option value="50">:50</option>
-	  					<option value="51">:51</option>
-					  	<option value="52">:52</option>
-					  	<option value="53">:53</option>
-	  					<option value="54">:54</option>
-	 					<option value="55">:55</option>
-	 					<option value="56">:56</option>
-	  					<option value="57">:57</option>
-					  	<option value="58">:58</option>
-	  					<option value="59">:59</option>
-					</select>
+				<ul id="alarm-list">
+					
+				</ul>
 
-					<select id="am2">
-	  					<option value="am">am</option>
-	 					<option value="pm">pm</option>
-					</select>
-				</div>	
-
-				<div class="notifications3">
-					<p id="alarm">Alarm 3</p>
-					<select id="hr3">
-	  					<option value="1">1</option>
-	 					<option value="2">2</option>
-	  					<option value="3">3</option>
-					  	<option value="4">4</option>
-	  					<option value="5">5</option>
-	 					<option value="6">6</option>
-	  					<option value="7">7</option>
-					  	<option value="8">8</option>
-	  					<option value="9">9</option>
-	 					<option value="10">10</option>
-	  					<option value="11">11</option>
-					  	<option value="12">12</option>
-					</select>
-
-					<select id="min3">
-	  					<option value="00">:00</option>
-	 					<option value="01">:01</option>
-	  					<option value="02">:02</option>
-					  	<option value="03">:03</option>
-	  					<option value="04">:04</option>
-	 					<option value="05">:05</option>
-	 					<option value="06">:06</option>
-	  					<option value="07">:07</option>
-					  	<option value="08">:08</option>
-	  					<option value="09">:09</option>
-	 					<option value="10">:10</option>
-	  					<option value="11">:11</option>
-					  	<option value="12">:12</option>
-					  	<option value="13">:13</option>
-	  					<option value="14">:14</option>
-	 					<option value="15">:15</option>
-	 					<option value="16">:16</option>
-	  					<option value="17">:17</option>
-					  	<option value="18">:18</option>
-	  					<option value="19">:19</option>
-	 					<option value="20">:20</option>
-	  					<option value="21">:21</option>
-					  	<option value="22">:22</option>
-					  	<option value="23">:23</option>
-	  					<option value="24">:24</option>
-	 					<option value="25">:25</option>
-	 					<option value="26">:26</option>
-	  					<option value="27">:27</option>
-					  	<option value="28">:28</option>
-	  					<option value="29">:29</option>
-	 					<option value="30">:30</option>
-	  					<option value="31">:31</option>
-					  	<option value="32">:32</option>
-					  	<option value="33">:33</option>
-	  					<option value="34">:34</option>
-	 					<option value="35">:35</option>
-	 					<option value="36">:36</option>
-	  					<option value="37">:37</option>
-					  	<option value="38">:38</option>
-	  					<option value="39">:39</option>
-	  					<option value="40">:40</option>
-	  					<option value="41">:41</option>
-					  	<option value="42">:42</option>
-					  	<option value="43">:43</option>
-	  					<option value="44">:44</option>
-	 					<option value="45">:45</option>
-	 					<option value="46">:46</option>
-	  					<option value="47">:47</option>
-					  	<option value="48">:48</option>
-	  					<option value="49">:49</option>
-	 					<option value="50">:50</option>
-	  					<option value="51">:51</option>
-					  	<option value="52">:52</option>
-					  	<option value="53">:53</option>
-	  					<option value="54">:54</option>
-	 					<option value="55">:55</option>
-	 					<option value="56">:56</option>
-	  					<option value="57">:57</option>
-					  	<option value="58">:58</option>
-	  					<option value="59">:59</option>
-					</select>
-
-					<select id="am3">
-	  					<option value="am">am</option>
-	 					<option value="pm">pm</option>
-					</select>
-				</div>
 				<p id="save_p"><input id="save" type="button" value="Save It" onclick="validateForm();"></p> <!-- onclick ="location.href='list.html'"  updateHabit() used to be inside-->
 			</form>
 
@@ -331,13 +119,39 @@
 			var defaultImage = Parse.Object.extend("DefaultImages");
 			var hasImageChanged = false;
 			var hasUploaded = false;
-			var counter = 0;
 
-			console.log("loading here")
+			function addAlarmToList(alarmNumber) 
+	        {
+	            var list = document.getElementById("alarm-list");
+	            var template = document.querySelector("#alarm")
+	            var clone = document.importNode(template.content, true);
+
+	            clone.querySelector(".alarm-name").textContent = "Alarm " + alarmNumber;
+
+	            var res = list.appendChild(clone);
+       		}
+
+
+			function editAlarmToList(alarmNumber, hours, minutes, am) 
+	        {
+	            var list = document.getElementById("alarm-list");
+	            var template = document.querySelector("#alarm")
+	            var clone = document.importNode(template.content, true);
+
+	            clone.querySelector(".alarm-name").textContent = "Alarm " + alarmNumber;
+	            clone.querySelector("#hr1").value = hours;
+	            clone.querySelector("#min1").value = minutes;
+	            clone.querySelector("#am1").value = am;
+
+	            var res = list.appendChild(clone);
+       		}
+
+
 			$("input[type='radio']").click(function()
 			{
-			  	var previousValue = $(this).attr('previousValue');
-			  	var name = $(this).attr('name');
+			  var previousValue = $(this).attr('previousValue');
+			  var name = $(this).attr('name');
+			  var frequencyAlarm = $(this).val();
 
 			  if (previousValue == 'checked')
 			  {
@@ -349,41 +163,89 @@
 			    $("input[name="+name+"]:radio").attr('previousValue', false);
 			    $(this).attr('previousValue', 'checked');
 			  }
+			  var others_text = document.getElementById('others');
+			  others_text.value = "";
+
+			  if (frequencyAlarm == "one")
+			  	frequencyAlarm = 1;
+			  else if (frequencyAlarm == "two")
+			  	frequencyAlarm = 2;
+			  else if (frequencyAlarm == "three")
+			  	frequencyAlarm = 3;
+
+			  $('#alarm-list').empty();
+			  var switchState = document.getElementById('myonoffswitch');
+			  if (switchState.checked)
+			  {
+				  for (var i = 1; i <= frequencyAlarm; i++) 
+				  {
+	                	addAlarmToList(i);
+	              }
+          	  }
 			});
 
+			//function called when other_text changes 
+			$("#others").change(function (e) {
+   				$("input[type='radio']").removeAttr('checked');
+			    $('#alarm-list').empty();
+			    if ($('#others').val() < 10 && $('#others').val() % 1 == 0  && $('#others').val() > 0 )
+			    {
+				    var frequencyAlarm;
 
-			function notify() {
-				if( counter % 2 == 1) {
-					$('.notifications1').css('display','none');
-					$('.notifications2').css('display','none');
-					$('.notifications3').css('display','none');
-				} else {
-					switch ($("input[name='day']:checked").val()) {
-						case "one":
-							$('.notifications1').css('display','block');
-							$('.notifications2').css('display','none');
-							$('.notifications3').css('display','none');		
-							break;
-						case "two":
-							$('.notifications1').css('display','block');
-							$('.notifications2').css('display','block');	
-							$('.notifications3').css('display','none');
-							break;
-						case "three":
-							$('.notifications1').css('display','block');
-							$('.notifications2').css('display','block');
-							$('.notifications3').css('display','block');
-							break;
-						default: 
-							$('.notifications1').css('display','block');	
+					frequencyAlarm = $('#others').val();
+
+					var switchState = document.getElementById('myonoffswitch');
+				    if (switchState.checked)
+				    {
+					  for (var i = 1; i <= frequencyAlarm; i++) 
+					  {
+		                	addAlarmToList(i);
+		              }
+	          	    }
+          		}
+			});
+
+			function switchNotification() 
+			{
+				var switchState = document.getElementById('myonoffswitch');
+				$('#alarm-list').empty(); //needed in either case (if notification on or off)
+
+				if (switchState.checked)
+				{	
+					var frequencyAlarm;
+					if (document.getElementById('once').checked)
+					{
+						frequencyAlarm = 1;
+						for (var i = 1; i <= frequencyAlarm; i++) 
+				 		{		
+	                		addAlarmToList(i);
+	              		}
 					}
-
+					else if (document.getElementById('twice').checked)
+					{
+						frequencyAlarm = 2;
+						for (var i = 1; i <= frequencyAlarm; i++) 
+				 		{		
+	                		addAlarmToList(i);
+	              		}
+					}
+					else if (document.getElementById('thrice').checked)
+					{
+						frequencyAlarm = 3;
+						for (var i = 1; i <= frequencyAlarm; i++) 
+				 		{		
+	                		addAlarmToList(i);
+	              		}
+					}
+					else if($('#others').val() < 10 && $('#others').val() % 1 == 0 && $('#others').val() > 0 )
+					{
+						frequencyAlarm = $('#others').val();
+						for (var i = 1; i <= frequencyAlarm; i++) 
+				 		{		
+	                		addAlarmToList(i);
+	              		}
+					}
 				}
-			}
-
-			function incCounter() {
-				counter ++;
-				notify();
 			}
 
 			function selectImage(name) {
@@ -642,6 +504,32 @@
 							document.getElementById("others").value = "" + frequencyPerDay;
 						}
 
+						//get user uploaded alarms
+						var alarms = habit.get("alarms");
+						var am;
+						var hr;
+						var min;
+
+						for (var i = 0; i < alarms.length; ++i) 
+						{
+							//alert(alarms[i].substring(0,2));
+							if (alarms[i].substring(0,2) > 11 && alarms[i].substring(0,2) < 24)
+								am = 'pm';
+							else
+								am = 'am';
+
+							if (alarms[i].substring(0,2) > 12 )
+								hr = alarms[i].substring(0,2) - 12;
+							else if (alarms[i].substring(0,2) == "00" || alarms[i].substring(0,2) == "12")
+								hr = "12";
+							else 
+								hr = alarms[i].substring(1,2); 
+
+							min = alarms[i].substring(3,5); 
+
+							editAlarmToList(i + 1, hr, min, am);
+						}
+
 						// Upload user uploaded image if it exists
 						var habitIcon = habit.get("icon");
 			            if (habitIcon) {
@@ -706,6 +594,32 @@
 							frequency = 3;
 						}
 						habitToEdit.set("frequency", frequency);
+
+
+						// Set alarms for habit
+						var habitAlarms = [];
+						var hours = '';
+						var minutes = '';
+						var alarmList = document.getElementById("alarm-list");
+						var alarms = alarmList.getElementsByTagName("li");
+						for (var i = 0; i < alarms.length; ++i) {
+							hours = parseInt(alarms[i].querySelector('#hr1').value);
+							minutes = parseInt(alarms[i].querySelector('#min1').value);
+
+							hours = hours % 12;
+
+							if (alarms[i].querySelector('#am1').value == 'pm') {
+								hours += 12;
+							}
+
+							// Format number strings for time
+							hours = ("0" + hours).slice(-2);
+							minutes = ("0" + minutes).slice(-2);
+
+							habitAlarms.push(hours + ':' + minutes);
+						}
+						habitToEdit.set("alarms", habitAlarms);
+
 
 						// Image upload
 						var iconID;
