--- a/src/edit.html
+++ b/src/edit.html
@@ -43,8 +43,8 @@
 
 
 				<p><label>Daily Frequency</label></p>
-				<p><label class="error_message" id="noDailyFrequency" style="display:none">Please select a daily frequency or enter your own (<10).</label></p>
-				<p><label class="error_message" id="selectedBothFrequencies" style="display:none">Please select EITHER a daily frequency OR enter your own (<10).</label></p>
+				<p><label class="error_message" id="noDailyFrequency" style="display:none">Please select a daily frequency or enter your own (&lt;10).</label></p>
+				<p><label class="error_message" id="selectedBothFrequencies" style="display:none">Please select EITHER a daily frequency OR enter your own (&lt;10).</label></p>
 				<div id="daily-button">
 					<label> <input style="display:none" id="once" type="radio" name="day" value="one"><span>1</span></label>
 					<label> <input style="display:none" id="twice" type="radio" name="day" value="two"><span>2</span></label>
@@ -506,6 +506,12 @@
 
 						//get user uploaded alarms
 						var alarms = habit.get("alarms");
+
+						// Notification switch should be off if no notifications
+						if (alarms.length == 0) {
+							document.getElementById("myonoffswitch").checked = false;
+						}
+
 						var am;
 						var hr;
 						var min;
