handling notifications error

--- a/src/add.html
+++ b/src/add.html
@@ -71,6 +71,8 @@
         			<span class="onoffswitch-switch"></span>
     				</label>
 				</div>
+				<p><label class="warning" id="noNotifications" style="display:none">Notifications aren't support in this browser.</label></p>
+
 				<template id="alarm">
 					<li>
 						<p class="alarm-name">Alarm 1</p>
