--- a/src/edit.html
+++ b/src/edit.html
@@ -5,6 +5,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Edit a habit</title>
 		<link rel="stylesheet" href="../css/forms.css">
+		<link rel="manifest" href="../manifest.json">
+	    <script
 		<script type="text/javascript" src="https://www.parsecdn.com/js/parse-latest.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	</head>
