--- a/src/add.html
+++ b/src/add.html
@@ -317,7 +317,7 @@
 				else
 					document.getElementById('isSat').className = "";
 
-				if ($( "#isSun, #isMon, #isTues, #isWed, #isThur, #isFri, #isSat" ).hasClass( "selectedDay" ) )
+				if ($( "#isSun, #isMon, #isTues, #isWed, #isThurs, #isFri, #isSat" ).hasClass( "selectedDay" ) )
 				{
 					document.getElementById('noFrequency').style.display = 'none';
 					freqValidated = true;
