--- a/src/add.html
+++ b/src/add.html
@@ -59,7 +59,6 @@
 					<span id="times">times</span>
 				</div>
 				<p><label><span id="others_text">Others: </span><input id="others" type="text" name="day" placeholder="More than 3 times"></label></p>	
-				<!--<p id="save_p"><input id="save" type="button" onclick="validateForm()" value="Save It" > onclick="location.href='list.html'" > onclick="addHabit();"></p> onclick ="location.href='list.html'" -->
 
 				<p id="notifications"><label>Notifications:</label></p>
 				<div class="onoffswitch" >
@@ -114,7 +113,7 @@
 					
 				</ul>
 
-				<p id="save_p"><input id="save" type="button" value="Save It" onclick="validateForm();"></p> <!-- onclick ="location.href='list.html'"  addHabit() used to be inside-->
+				<p id="save_p"><input id="save" type="button" value="Save It" onclick="validateForm();"></p>
 			</form>
 
 		</div>
@@ -366,9 +365,7 @@
 				if (tileValidated && iconValidated && freqValidated && dailyFreqValidated)
 				{
 					addHabit();
-				}
-				 
-			//if ($('#title').val() == '')
+				}				 
 			}
 
 			function hasClass(element, cls) {
@@ -469,9 +466,6 @@
 					        habitToAdd.save(null, {
 								success: function(habitToAdd) {
 									// Execute any logic that should take place after the object is saved.
-									// alert('New object created with objectId: ' + habitToAdd.id);
-
-									console.log('new object created with objectId: ' + habitToAdd.id);
 									location = "list.html"
 								},
 								error: function(habitToAdd, error) {
@@ -507,9 +501,6 @@
 					habitToAdd.save(null, {
 						success: function(habitToAdd) {
 							// Execute any logic that should take place after the object is saved.
-							// alert('New object created with objectId: ' + habitToAdd.id);
-
-							console.log('new object created with objectId: ' + habitToAdd.id);
 							location = "list.html"
 						},
 						error: function(habitToAdd, error) {
