--- a/src/list.html
+++ b/src/list.html
@@ -53,7 +53,7 @@
 
                     <div class="habit-op">
                         <button type="button" class="op op-done" id="thumbsUp" onclick="completeHabit(this); showMsg(this);" title="done">
-                            <img src="../img/done.svg" alt="Done">
+                            <img src="../img/thumbsUp.svg" alt="Done">
                         </button>
                         <button type="button" class="op op-down" id="thumbsDown" onclick="failHabit(this); showMsg(this);" title="fail">
                             <img src="../img/thumbsdown.svg" alt="Down">
@@ -78,8 +78,6 @@
 
         function showMsg(element){
             var msgElement = (element.parentNode.parentNode.getElementsByClassName("message"))[0];
-            // alert(msgElement.innerHTML);
-
             msgElement.style.visibility="visible";
         }
 
@@ -115,7 +113,6 @@
         }
 
         function editHabit(element) {
-            // localStorage.setItem("toEdit", element.parentNode.parentNode.getAttribute("data-id"));
             location = "edit.html?id=" + element.parentNode.parentNode.getAttribute("data-id");
         }
 
@@ -124,7 +121,6 @@
             var parent = child.parentNode;
 
             var query = new Parse.Query(Habit);
-            // console.log("Element to delete: " + child.getAttribute("data-id"))
             var confirmDelete = confirm("Are you sure you want to delete this habit?");
             if (confirmDelete == true) {
                 query.get(child.getAttribute("data-id"), {
@@ -138,15 +134,14 @@
                             error: function(habit, error) {
                                 // The delete failed.
                                 // error is a Parse.Error with an error code and message.
-                                console.log("error here 2")
+                                console.log(error);
                             }
                         });
                     },
                     error: function(object, error) {
                         // The object was not retrieved successfully.
                         // error is a Parse.Error with an error code and message.
-                        console.log("error here1")
-                        console.log(error)
+                        console.log(error);
                     }
                 });
             }
@@ -345,19 +340,6 @@
                 habit.set('currDate', currDateStr);
                 habit.set('currDay', currentDate.getDay());
                 habit.save();
-                /* habit.save(null, {
-                    success: function(updatedHabit) {
-                        // Execute any logic that should take place after the object is saved.
-                        // Update progress bar
-                        streak(updatedHabit, clone);
-                    },
-                    error: function(updatedHabit, error) {
-                        // Execute any logic that should take place if the save fails.
-                        // error is a Parse.Error with an error code and message.
-                        console.log('Failed to update object, with error code: ' + error.message);
-                        alert("Error with accessing habits; please check your network connection and try again later.");
-                    }
-                }); */
             }
             else {
                 // If user already completed/failed habit the specified number of times for that day, disable
@@ -365,8 +347,6 @@
                 if (habit.get('thumbCtr') == habit.get('frequency')) {
                     clone.querySelector(".op-done").className = "op op-done";
                     clone.querySelector(".op-down").className = "op op-down";
-                    // Display message if habit completed for the day
-                    // showMsg(clone.querySelector(".op-done"));
                 }
             }
 
