Small additions to welcome.html and took out more console logs

--- a/src/welcome.html
+++ b/src/welcome.html
@@ -12,6 +12,7 @@
           
         <h2><span>keep your habits in line</span></h2>    
      
+     	<p id="list"><input class="addbutton" type="button" value="view my habits" onclick="location.href='list.html'"></p>
 	    <p id="add"><input class="addbutton" type="button" value="add a habit" onclick="location.href='add.html'">
 		</p>
 	  </div>
