--- a/src/welcome.html
+++ b/src/welcome.html
@@ -5,15 +5,16 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Welcome to Virtue/Vice!</title>
 		<link rel="stylesheet" href="../css/welcome.css">
+		<link rel="stylesheet" href="../css/animate.min.css">
 	</head>
 	<body>
 	  <div class="welcome">
-	  	<h1>virtue / <i>vice</i></h1>
+	  	<h1 class="animated bounceInDown">virtue / <i class="animated bounceInDown">vice</i></h1>
           
-        <h2><span>keep your habits in line</span></h2>    
+        <h2 class="animated bounceInLeft"><span>keep your habits in line</span></h2>    
      
-     	<p id="list"><input class="addbutton" type="button" value="view my habits" onclick="location.href='list.html'"></p>
-	    <p id="add"><input class="addbutton" type="button" value="add a habit" onclick="location.href='add.html'">
+     	<p id="list"><input class="addbutton animated bounceInUp" type="button" value="view my habits" onclick="location.href='list.html'"></p>
+	    <p id="add"><input class="addbutton animated bounceInUp" type="button" value="add a habit" onclick="location.href='add.html'">
 		</p>
 	  </div>
 	</body>
